--- a/src/TripServer/project.json
+++ b/src/TripServer/project.json
@@ -11,7 +11,9 @@
     "Microsoft.EntityFrameworkCore.Tools": "1.0.0-preview1-final",
     "Microsoft.AspNetCore.Mvc.Core": "1.0.0-rc2-final",
     "Microsoft.AspNetCore.Mvc": "1.0.0-rc2-final",
-    "System.Linq": "4.1.0-rc2-24027" 
+    "System.Linq": "4.1.0-rc2-24027",
+    "Microsoft.Extensions.Configuration.FileExtensions": "1.0.0-rc2-final",
+    "Microsoft.Extensions.Configuration.Json": "1.0.0-rc2-final" 
   },
 
   "tools": {
